feat: Cluster 集群

--- a/src/blogs/Node/核心模块/Cluster 集群/3. Worker 对象.md
+++ b/src/blogs/Node/核心模块/Cluster 集群/3. Worker 对象.md
@@ -1,50 +1,109 @@
-Worker对象是`cluster.fork()`的返回值，代表一个 Worker 进程。它的属性和方法如下
-# Worker 属性
-## worker.id
-返回当前Worker的独一无二的进程编号。这个编号也是`cluster.workers`中指向当前进程的索引值。
-## worker.process
-所有的Worker进程都是用`child_process.fork()`生成的。`child_process.fork()`返回的对象，就被保存在`worker.process`之中。在工作进程中，全局的 process 被存储。
-
-通过这个属性，可以获取Worker所在的进程对象。也可以通过这个属性向主进程发送消息。
-
-请注意，如果 'disconnect' 事件发生在 process 上，并且 exitedAfterDisconnect 属性不是 true，则工作进程会调用 process.exit(0)。这可以防止意外断开。
-## worker.exitedAfterDisconnect
-
-- 通过调用 kill() 或 disconnect() 退出则为true
-- 人工以任何其他方式退出则为false
-- 工作进程没有退出则为 undefined
-
-worker.exitedAfterDisconnect 的布尔值可以让你区分自行退出和意外退出，主进程可以根据这个值判断要不要重新启动一个工作进程
+# Worker 对象
+Worker对象是`cluster.fork()`的返回值，代表一个 Worker 进程。
+## Worker 属性
+### `worker.id`
+返回当前 Worker 进程独一无二的进程编号。这个编号也是`cluster.workers`中指向当前进程的索引值。
+### `worker.process`
+用于表示工作进程的进程对象。当使用 Cluster 模块创建子进程（工作进程）时，每个工作进程都会有一个与之关联的`process`对象，该对象实际上是 Node 的`ChildProcess`类的实例。
+要用途
+- 事件监听：可以监听工作进程的各种事件，如`exit`、`error`等，以便于监控工作进程的状态和处理异常。
+- 发送信号：可以向工作进程发送信号，如SIGTERM、SIGKILL等，用于控制工作进程的结束或其他行为。
+- 进程通信：可以通过`worker.process.send()`方法发送消息到工作进程，实现主进程与工作进程之间的通信。
 ```javascript
-cluster.on('exit', (worker, code, signal) => {
-  if (worker.suicide === true) {
-    console.log('Oh, it was just suicide\' – no need to worry')
-  }
-})
+const cluster = require('cluster');
+const http = require('http');
 
-// kill worker
-worker.kill()
-```
-# Worker 方法
-## worker.send(message[, sendHandle][, callback])
-发送一个消息到一个工作进程或主进程，处理句柄是可选的
-
-- 在主进程中，它发送一个消息到一个指定工作进程上。它与 [ChildProcess.send()](https://www.mianshigee.com/read/nodejs-api-doc-cn/child_process-class_ChildProcess.md#send) 相同
-- 在工作进程中，它发送消息到主进程。它与 process.send() 相同
-```javascript
 if (cluster.isMaster) {
-  var worker = cluster.fork()
-  worker.send('hi there')
-} else if (cluster.isWorker) {
-  process.on('message', function(msg) {
-   console.log(msg) // hi there
-  })
+  const worker = cluster.fork();
+
+  // 监听工作进程的退出事件
+  worker.process.on('exit', (code, signal) => {
+    if (signal) {
+      console.log(`工作进程被信号 ${signal} 杀死`);
+    } else if (code !== 0) {
+      console.log(`工作进程退出，退出码: ${code}`);
+    } else {
+      console.log('工作进程成功退出');
+    }
+  });
+
+  // 发送消息到工作进程
+  worker.process.send({ msg: 'Hello from master' });
+
+} else {
+  // 工作进程的逻辑
+  process.on('message', (msg) => {
+    console.log('来自主进程的消息:', msg);
+  });
+
+  http.createServer((req, res) => {
+    res.writeHead(200);
+    res.end('Hello World\n');
+  }).listen(8000);
 }
 ```
-## worker.disconnect()
+### `worker.exitedAfterDisconnect`
+用于判断工作进程是优雅推出还是因为其他原因退出：
+- 通过调用`kill()`或`disconnect()`退出，将被设置为`true`
+- 其他原因退出，如进程崩溃，将被设置为`false`
+- 工作进程没有退出，则为`undefined`
 
-- 在工作进程中，该函数会关闭所有的服务器，等待 'close' 事件，然后断开 IPC 通道
-- 在主进程中，会发送一个内部消息到工作进程，让工作进程自身调用 disconnect()。并设置exitedAfterDisconnect
+`worker.exitedAfterDisconnect`可以让你区分自行退出和意外退出，主进程可以根据这个值判断要不要重新启动一个工作进程
+```javascript
+const cluster = require('cluster');
+
+if (cluster.isMaster) {
+  const worker = cluster.fork();
+
+  worker.on('exit', (code, signal) => {
+    if (worker.exitedAfterDisconnect === true) {
+      console.log('工作进程优雅退出');
+    } else {
+      console.log('工作进程崩溃退出');
+      // 可以在这里重启工作进程
+    }
+  });
+
+  // 主动断开工作进程
+  worker.disconnect();
+} else {
+  // 工作进程的代码
+}
+```
+## Worker 方法
+### `worker.send(message[, sendHandle[, options]][, callback])`
+从主进程向工作进程（Worker进程）发送消息。这个方法允许主进程与工作进程之间进行通信。工作进程同样可以使用`process.send`方法向主进程发送消息。
+
+该方法可接收四个对象：
+- message：要发送的消息。这个参数可以是任何 JSON 序列化后支持的数据类型，包括对象、数组、字符串、数字等。
+- sendHandle（可选）：一个用于传递网络服务器和套接字的句柄。这允许你在不同的进程之间传递网络连接等资源。
+- options（可选）：一个包含配置选项的对象。在 Node 的某些版本中，这个参数可以用来指定一些额外的发送选项，不常用。
+- callback（可选）：当消息发送完成时调用的回调函数。如果在发送消息时发生错误，这个回调函数会接收一个错误对象作为参数。
+```javascript
+const cluster = require('cluster')
+
+if (cluster.isMaster) {
+  const worker = cluster.fork()
+
+  // 向工作进程发送消息
+  worker.send({ msg: '来自主进程的消息' }, (error) => {
+    if (error) {
+      console.error('消息发送失败', error)
+    } else {
+      console.log('消息发送成功')
+    }
+  })
+} else {
+  process.on('message', (msg) => {
+    console.log('工作进程收到消息:', msg)
+  })
+  // 向主进程回复消息
+  process.send({ msg: '来自工作进程的回复' })
+}
+```
+### `worker.disconnect()`
+#### 主进程调用
+在主进程中，会发送一个内部消息到工作进程，让工作进程自身调用`disconnect()`。并设置`exitedAfterDisconnect`
 ```javascript
 if (cluster.isMaster) {
     var worker = cluster.fork();
@@ -72,63 +131,87 @@ if (cluster.isMaster) {
     });
 }
 ```
-## worker.kill([signal=’SIGTERM’])
-kill方法用于终止 Worker 进程。它可以接受一个参数，表示系统信号。默认值: `'SIGTERM'`。在以前的版本中，该方法也叫做`worker.destroy()`
+#### 工作进程中调用
+`worker.disconnect()`方法通常在主进程中被调用，用于优雅地断开与特定工作进程的连接。然而，如果想要在工作进程内部触发断开连接的逻辑，可以通过`process.disconnect()`来实现。
 
-- 如果当前是主进程，就会终止与`worker.process`的联络，然后将系统信号发向Worker进程。
-- 如果当前是Worker进程，就会终止与主进程的通信，然后退出，返回0
+当在工作进程中调用`process.disconnect()`时，它会关闭工作进程与主进程之间的 IPC 通道，导致工作进程被优雅地关闭。这意味着工作进程将不再处理新的请求，但它会完成当前正在处理的请求。
+```javascript
+const cluster = require('cluster');
+const http = require('http');
+
+if (cluster.isMaster) {
+  // 主进程逻辑
+  const worker = cluster.fork();
+
+  worker.on('disconnect', () => {
+    console.log('工作进程已断开连接');
+  });
+
+} else {
+  // 工作进程逻辑
+  const server = http.createServer((req, res) => {
+    res.writeHead(200);
+    res.end("Hello World\n");
+
+    // 模拟在请求处理完毕后断开连接
+    process.disconnect();
+  });
+
+  server.listen(8000);
+
+  process.on('disconnect', () => {
+    console.log('工作进程即将断开连接...');
+  });
+}
+```
+注意事项
+- 在工作进程中调用`process.disconnect()`会导致该工作进程退出，因此请确保这是你预期的行为。
+- 断开连接后，如果需要，主进程可以监听`disconnect`事件来决定是否需要启动新的工作进程来替代断开连接的工作进程。
+### `worker.kill([signal=’SIGTERM’])`
+kill方法用于终止 Worker 进程。它可以接受一个参数，表示系统信号。默认值: `'SIGTERM'`。在以前的版本中，该方法也叫做`worker.destroy()`
+- 如果当前是主进程，就会终止与`worker.process`的联络，然后将系统信号发向 Worker 进程。
+- 如果当前是 Worker 进程，就会终止与主进程的通信，然后退出，返回0
 
 由于`kill()`尝试正常断开工作进程，因此很容易无限期地等待断开连接完成。 例如，如果工作进程进入无限循环，则永远不会发生正常的断开连接。 如果不需要正常的断开连接行为，则使用`worker.process.kill()`
-### 信号的概念
-信号是一种用于 Unix、类 Unix 和其他 posix 兼容的操作系统上的一种有限的进程间通信方式。
 
-一个信号是一个异步的通知，他会发送到一个进程或进程内的一个特定的线程来通知某个事件发生了。
+**Node 应用的退出，其实质是系统或环境向 Node 发送信号。因此如果通过合适的方式来响应信号，就可以达到优雅退出的目的。**
+### `worker.isConnected()`
+如果工作进程通过它的 IPC 通道连接到了它的主进程，那么这个函数返回`true`，否则`false`。
 
-大部分的信号是用于中断某个操作，比如：
-
-- 进程退出或者子进程终止时
-- 进程越界或企图写一个只读的内存区域
-- 终端交互相关的信号。如用户关闭一个终端，按下 Ctrl + C
-- 手动杀进程，比如`kill -9 pid`
-#### 退出信号
-
-- SIGTERM，用于终止程序，他可以友好的要求一个程序终止。程序即可以响应这个信号清理资源并退出，又可以忽略这个信号
-   - 比如 `kill -15 pid`
-- SIGKILL，用于立刻终止程序。与 SIGTERM 信号不同，进程不能响应或忽略这个信号
-   - 比如`kill -9 pid`
-- SIGINT，在用户键入 INTR 字符时发出，用于通知进程终止
-   - 通常是 Ctrl + C
-   - `kill -2 pid`
-- SIGQUIT，和 SIGINT 类似，但由 QUIT 字符来控制，进程在收到 SIGQUIT 退出时会产生 core 文件，在这个意义上类似于一个程序错误信号
-   - 通常是 Ctrl + \
-   - `kill -3 pid`
-
-**Node 应用的退出，其实质是系统或环境向 Node 发送这几个信号。因此如果通过合适的方式来响应这几个信号，就可以达到优雅退出的目的。**
-## worker.isConnected()
-如果工作进程通过它的 IPC 通道连接到了它的主进程，那么这个函数返回 true，否则 false。
-
-一个工作进程在被创建后连接到它的主进程。它在触发 'disconnect' 事件后断开。
-## worker.isDead()
-如果工作进程已终止（无论是正常退出还是被信号关闭），这个函数返回 true，否则它返回 false。
-# Worker 监听事件
-## ‘online’ 事件
-类似于 cluster.on('online') 事件，但指定为该工作进程。**它不是在工作进程上触发的。**
+一个工作进程在被创建后会连接到主进程，并在触发`'disconnect'`事件后断开。
+### `worker.isDead()`
+如果工作进程已终止（无论是正常退出还是被信号关闭），这个函数返回`true`，否则它返回`false`。
+## Worker 监听事件
+### `online`事件
+类似于`cluster.on('online')`事件，用于监听当前子进程。
 ```javascript
-cluster.fork().on('online', () => {
-  // Worker is online
-});
+const cluster = require('cluster');
+
+if (cluster.isMaster) {
+  console.log(`主进程 ${process.pid} 正在运行`);
+
+  // 创建工作进程
+  const worker = cluster.fork();
+
+  // 监听 online 事件
+  worker.on('online', () => {
+    console.log(`工作进程 ${worker.process.pid} 已上线`);
+  });
+
+} else {
+  // 工作进程的代码可以放在这里
+  console.log(`工作进程 ${process.pid} 已启动`);
+}
 ```
-## ‘listening’ 事件
-类似于 cluster.on('listening') 事件，但指定为该工作进程。它不是在工作进程上触发的。从工作进程调用 listen()，对当前工作进程进行监听
+### `listening`事件
+类似于`cluster.on('listening')`事件，用于监听当前子进程。
 ```javascript
 cluster.fork().on('listening', (address) => {
   // Worker is listening
 });
 ```
-## ‘message’ 事件
-类似于 cluster.on('message') 事件，但指定为该工作进程。此事件与 [child_process.fork()](https://www.mianshigee.com/read/nodejs-api-doc-cn/child_process-asynchronous_process_creation.md#fork) 上提供的同名事件相同。
-
-在工作进程中，也可以使用 process.on('message')监听 message 事件
+### `message`事件
+类似于`cluster.on('message')`事件，但指定为该工作进程。在工作进程中，也可以使用`process.on('message')`监听`message`事件
 
 举例：主进程中使用消息系统保持对请求数量的计数：
 ```javascript
@@ -166,15 +249,15 @@ if (cluster.isMaster) {
     }).listen(8000);
 }
 ```
-## ‘disconnect’ 事件
+### `disconnect`事件
 在工作进程 IPC 通道断开连接后触发。 当工作进程正常退出、被杀死、或手动断开连接时触发
 ```javascript
 cluster.fork().on('disconnect', () => {
   // Worker has disconnected
 })
 ```
-## ‘exit’ 事件
-当任何工作进程死亡时，则当前worker工作进程对象将触发 'exit' 事件。
+### `exit`事件
+当任何工作进程死亡时，则当前工作进程对象将触发`exit`事件。
 ```javascript
 const worker = cluster.fork()
 worker.on('exit', (code, signal) => {
@@ -187,5 +270,5 @@ worker.on('exit', (code, signal) => {
   }
 })
 ```
-## ‘error’ 事件
-此事件与 [child_process.fork()](https://www.mianshigee.com/read/nodejs-api-doc-cn/child_process-asynchronous_process_creation.md#fork) 上提供的同名事件相同。在工作进程中，也可以使用 process.on('error')。
+### `error`事件
+此事件与 [child_process.fork()](https://www.mianshigee.com/read/nodejs-api-doc-cn/child_process-asynchronous_process_creation.md#fork) 上提供的同名事件相同。在工作进程中，也可以使用`process.on('error')`。
