--- a/src/blogs/Service/负载均衡/应用内负载均衡.md
+++ b/src/blogs/Service/负载均衡/应用内负载均衡.md
@@ -1,19 +1,21 @@
 # 应用内负载均衡
 当我们明白了网络架构上的负载均衡方式之后，接下来就说下应用内的负载均衡。应用内负载均衡分为两种
-
 - 进程负载均衡：当一个机器接收到请求后，机器内部会将主进程分为多个子进程，并将请求分散到子进程中。比如 Node.js 的 PM2就有单机负载均衡的作用。
 - RPC负载均衡：假如 Node 服务要通过RPC调用远程其他服务，为了不影响其他服务，需要将RPC均衡分派到其他服务的不同节点上
 
 ## 进程负载均衡
 常见的进程负载均衡工具有PM2，通过 [Cluster](https://www.yuque.com/zygg/bemfxw/xycrl6ge8x9ku2d6) 模块实现
-![image.png](https://cdn.nlark.com/yuque/0/2022/png/26943751/1657447817936-9ad0c126-b2cd-48c8-9a23-424a9117d408.png#averageHue=%23f4f4f3&clientId=u2e7af9c3-3147-4&from=paste&height=348&id=ubed4ddd8&originHeight=696&originWidth=1160&originalType=binary&ratio=1&rotation=0&showTitle=false&size=209259&status=done&style=none&taskId=uca9c1e4f-a90b-4a21-97f2-ef9c4097070&title=&width=580)
+
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/负载均衡/进程负载均衡.png" height="300px" />
 
 ## RPC负载均衡
 假如 Node 服务要通过RPC调用远程其他服务，为了不影响其他服务，需要将RPC均衡分派到其他服务的不同节点上
 
 ### RPC概念
 RPC是指远程过程调用，也就是说两台服务器A，B，一个应用部署在A服务器上，想要调用B服务器上应用提供的函数/方法，**由于不在一个内存空间，不能直接调用**，需要通过网络来表达调用的语义和传达调用的数据。
+
 那么服务 A 如果想要调用服务 B 中的某个方法该怎么办呢？使用 HTTP请求 当然可以，但是可能会比较慢而且一些优化做的并不好。 RPC 的出现就是为了解决这个问题。
+
 最终解决的问题：**让分布式或者微服务系统中不同服务之间的调用像本地调用一样简单。解决不同服务之间调用问题。**
 
 #### 为什么用 RPC，不用 HTTP
@@ -29,7 +31,7 @@ RPC是指远程过程调用，也就是说两台服务器A，B，一个应用部
 **性能消耗，主要在于序列化和反序列化的耗时**
 
 - TCP，可以基于各种序列化框架进行，效率比较高
-- HTTP，大部分是通过 json 来实现的，字节大小和序列化耗时都要更消耗性能
+- HTTP，大部分是通过 JSON 来实现的，字节大小和序列化耗时都要更消耗性能
 
 **跨平台：**
 
@@ -54,6 +56,4 @@ RPC是指远程过程调用，也就是说两台服务器A，B，一个应用部
 9. 服务消费方（client）得到最终结果
 
 时序图如下
-![image.png](https://cdn.nlark.com/yuque/0/2022/png/26943751/1657451428069-24366549-f957-47eb-ba3c-af0415c11f2a.png#averageHue=%23f7f7f7&clientId=u2e7af9c3-3147-4&from=paste&height=542&id=SEDN5&originHeight=1238&originWidth=1526&originalType=binary&ratio=1&rotation=0&showTitle=false&size=140497&status=done&style=none&taskId=u5d4427f3-7cb9-4efa-bbe2-4e110fa47a1&title=&width=668)
-
-
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/负载均衡/RPC时序图.png" height="300px" />
