feat: 优化md文件判断逻辑

--- a/src/blogs/前端基础/JavaScript/正则表达式/常用正则表达式.md
+++ b/src/blogs/前端基础/JavaScript/正则表达式/常用正则表达式.md
@@ -17,23 +17,23 @@
 ### 预定义类（当前位置）
 | 代码 | 解释 |
 | --- | --- |
-| . | 匹配除换行符以外的任意字符 |
-| \\w | 匹配字母或数字或下划线或汉字 |
-| \\s | 匹配任意的空白符 |
-| \\d | 匹配数字 |
-| \\b | 匹配一个零宽单词边界 |
-| ^ | 匹配字符串的开始 |
-| $ | 匹配字符串的结束 |
+| `.` | 匹配除换行符以外的任意字符 |
+| `\w` | 匹配字母或数字或下划线或汉字 |
+| `\s` | 匹配任意的空白符 |
+| `\d` | 匹配数字 |
+| `\b` | 匹配一个零宽单词边界 |
+| `^` | 匹配字符串的开始 |
+| `$` | 匹配字符串的结束 |
 
 #### 取反
 | 代码 | 解释 |
 | --- | --- |
-| \\W | 匹配任意不是字母，数字，下划线，汉字的字符 |
-| \\S | 匹配任意不是空白符的字符 |
-| \\D | 匹配任意非数字的字符 |
-| \\B | 匹配一个零宽非单词边界 |
+| `\W` | 匹配任意不是字母，数字，下划线，汉字的字符 |
+| `\S` | 匹配任意不是空白符的字符 |
+| `\D` | 匹配任意非数字的字符 |
+| `\B` | 匹配一个零宽非单词边界 |
 
-#### \b 和 \B
+#### `\b` 和 `\B`
 在[MDN](https://link.zhihu.com/?target=https%3A//developer.mozilla.org/zh-CN)中有关于这个的表述：
 
 - `\b` 的描述：匹配一个零宽单词边界（Matches a zero-width word boundary）
@@ -57,21 +57,21 @@ str.replace(reg2, '#') // a ## _#_
 ### 量词（数量）
 | 代码 | 解释 |
 | --- | --- |
-| * | 重复零次或更多次 |
-| + | 重复一次或更多次 |
-| ? | 重复零次或一次 |
-| {n} | 重复n次 |
-| {n,} | 重复n次或更多次 |
-| {n,m} | 重复n到m次 |
+| `*` | 重复零次或更多次 |
+| `+` | 重复一次或更多次 |
+| `?` | 重复零次或一次 |
+| `{n}` | 重复n次 |
+| `{n,}` | 重复n次或更多次 |
+| `{n,m}` | 重复n到m次 |
 
 ### 范围类
 | 代码 | 解释 |
 | --- | --- |
-| [abc] | 只匹配 abc 中的一个 |
-| [^x] | 匹配除了x以外的任意字符 |
-| [.?!] | 匹配标点符号(.或?或!) |
-| [0-9] | 匹配数字0 - 9 的任意一个字符 |
-| [a-zA-Z] | 匹配所有字母的一个 |
+| `[abc]` | 只匹配 abc 中的一个 |
+| `[^x]` | 匹配除了x以外的任意字符 |
+| `[.?!]` | 匹配标点符号(`.`或`?`或`!`) |
+| `[0-9]` | 匹配数字0 - 9 的任意一个字符 |
+| `[a-zA-Z]` | 匹配所有字母的一个 |
 
 ### 正则贪婪模式和非贪婪模式
 #### 贪婪模式
