feat: 更新Node核心模块

--- a/src/blogs/工程化/包管理工具/4. package配置项/3. NPM包间的依赖关系.md
+++ b/src/blogs/工程化/包管理工具/4. package配置项/3. NPM包间的依赖关系.md
@@ -4,6 +4,7 @@
 -  **dependencies - 生产环境依赖** 
 -  **devDependencies - 开发环境依赖** 
 -  **peerDependencies - 兼容（同伴）依赖** 
+-  **resolutions - 用于强制指定项目中依赖的特定版本。这在处理依赖冲突或修复安全漏洞时非常有用。它只在使用 Yarn 作为包管理器时有效。**
 -  **bundledDependencies / bundleDependencies - 打包依赖** 
 -  **optionalDependencies - 可选（不阻断安装）依赖** 
 
@@ -48,6 +49,28 @@
 > 大白话：如果你安装我，那么你最好也要按照我的要求安装A、B和C。
 
 
+## resolutions
+用于强制指定项目中依赖的特定版本。这在处理依赖冲突或修复安全漏洞时非常有用。它只在使用 Yarn 作为包管理器时有效。
+```json
+{
+  "name": "your-project",
+  "version": "1.0.0",
+  "dependencies": {
+    "some-package": "^1.0.0"
+  },
+  "resolutions": {
+    "some-package": "1.0.3",
+    "another-package/some-dependency": "2.1.0"
+  }
+}
+```
+在这个示例中，`resolutions`字段强制`some-package`使用版本`1.0.3`，并且强制`another-package`的`some-dependency`使用版本 `2.1.0`。
+
+### 和 peerDependencies 的区别
+`peerDependencies`和`resolutions`是`package.json`文件中用于管理依赖的两个不同字段，它们的作用和使用场景有所不同。
+- `peerDependencies`用于指定项目所依赖的包的版本，但这些依赖项并不会自动安装。它通常用于库或插件中，表示该库或插件需要与特定版本的另一个库一起使用。
+- `resolutions`用于强制指定项目中依赖的特定版本，通常用于解决依赖冲突或修复安全漏洞。它只在使用 Yarn 作为包管理器时有效。
+
 ## bundledDependencies / bundleDependencies
 这种依赖跟`npm pack`打包命令有关。假设`package.json`中有如下配置：
 ```javascript
@@ -80,3 +103,4 @@
 `optionalDependencies`对象中的包会覆盖`dependencies`中同名的包，所以只需在一个地方进行设置即可。
 
 在实际项目中，如果某个包已经失效，我们通常会寻找它的替代者，或者换一个实现方案。不确定的依赖会增加代码判断和测试难度，所以这个依赖项还是 **尽量不要使用**。
+
