--- a/src/blogs/前端基础/TypeScript/1. 基础类型/1. 基础类型.md
+++ b/src/blogs/前端基础/TypeScript/1. 基础类型/1. 基础类型.md
@@ -383,3 +383,166 @@ console.log(a === b) // true
 
 const d: typeof a = Symbol('yyy') // error 不能将类型“typeof d”分配给类型“typeof a”
 ```
+
+## 只读常量集合
+想要定义常量数组和常量对象时可以使用`as const`
+```typescript
+// 通过 as const 将 number[] 类型的数组转成了 readonly [1, 2, 3] 元组
+const ARR = [1,2,3] as const
+ARR[1] = 0 // error，无法为“1”赋值，因为它是只读属性。
+type A = typeof ARR // readonly [1, 2, 3]
+
+const OBJ = {
+  name: '123',
+  age: 18
+} as const
+
+OBJ[name] = '456' // error
+
+type A = typeof OBJ
+// type A = {
+//     readonly name: "123";
+//     readonly age: 18;
+// }
+```
+声明常量对象时，建议使用枚举声明
+```typescript
+// Bad
+const OBJ = {
+  name: '123',
+  age: 18
+} as const
+
+// Good
+enum OBJ {
+  name = '123',
+  age = 18
+}
+```
+# 可变元组
+当一个数组前面几个值始终不变，后面几个灵活变化时，使用如下写法
+```typescript
+let salary: [string, number, ...any[]] = ['张三', 100, 100, 100, 'sadsa']
+// 可变元组的解构
+let [name, cardId, ...rest] = ['张三', 100, 100, 100, 'sadsa']
+console.log(name, cardId, '可变元组', rest)
+```
+## 可变元组tag
+使用tag可以标识该元组中每个类型的作用，方便维护
+```typescript
+// 可变元组tag 标签名可以一样也可以不一样
+let [name, cardId, ...rest]: [name_: string, cardId: number, ...rest_: any[]] = ['张三', 100, 100, 100]
+```
+
+## 类型守卫
+定义：TypeScript 条件语句中遇到下列条件关键字时，会在语句的块级作用域内（`if`语句内，或条目运算符表达式内）缩小变量的类型，这种类型推断的行为称作类型守卫。类型守卫可以帮助我们在块级作用域中获得更为需要的精确变量类型
+### 常见的类型守卫
+- `typeof`：类型判断
+- `instanceof`：实例判断
+- `in`：用于判断对象中是否含有某属性或者方法，比如
+   - `if('name' in obj){}`
+- `===`、`!==`、`==`、`!=`：字面量相等判断
+
+#### `typeof`
+在 TypeScript 类型系统里，typeof 可以用来获取一个变量或对象的类型，这在很多场景下非常有用，比如定义类型别名、函数参数类型等。
+
+1. 获取变量的类型
+```typescript
+const person = {
+  name: 'John',
+age: 30
+}
+
+// 使用 typeof 获取 person 的类型
+type PersonType = typeof person
+// type PersonType = {
+//   name: string;
+//   age: number;
+// }
+const anotherPerson: PersonType = {
+  name: 'Jane',
+  age: 25
+}
+```
+2. 获取函数的类型
+```typescript
+function add(a: number, b: number): number {
+  return a + b
+}
+
+// 获取 add 函数的类型`
+type AddFunctionType = typeof add
+// type AddFunctionType = (a: number, b: number) => number
+
+const anotherAdd: AddFunctionType = function(x: number, y: number): number {
+  return x + y
+}
+```
+3. 与 keyof 结合使用：typeof 常与 keyof 结合使用，用于获取对象的属性名类型。
+```typescript
+const user = {
+  id: 1,
+  username: 'john_doe'
+}
+
+// 获取 user 对象属性名的联合类型
+type UserKeys = keyof typeof user // 等价于 'id' | 'username'
+
+function getUserProperty(key: UserKeys) {
+  return user[key]
+}
+
+const idValue = getUserProperty('id')
+const usernameValue = getUserProperty('username')
+```
+### 自定义类型守卫
+```typescript
+// 通用写法
+function 函数名(形参: 参数类型【一般为 any】): 形参 is A类型 {
+  return true or false
+}
+```
+例子
+```typescript
+// 1. 判断变量类型是不是布尔类型
+function isBoolean(e: any): e is boolean {
+  return typeof e === 'boolean'
+}
+
+// 2. 判断变量类型是不是 Man 类类型
+class Man {
+  constructor() {}
+}
+function isMan(e: any): e is Man {
+  return e instanceof Man
+}
+
+// 3. 判断变量类型是不是 Ref 接口类型
+interface Ref<T> {
+  value: T,
+  _v_isRef: true
+}
+
+function isRef(r: any): r is Ref {
+  return Boolean(r && r._v_isRef === true)
+}
+```
+
+## 泛型约束
+使用`extends`关键字可以对约束传入的泛型类型
+```typescript
+// 约束传入的 T 必须是一个对象类型
+interface X<T extends object> {
+  value: T
+}
+// 测试一
+interface Obj = {
+  name: string
+}
+
+const obj: X<Obj> = {
+  name: 'xiaoming' // success
+}
+// 测试二
+const obj: X<string> = '123' // error
+```
