--- a/src/blogs/前端基础/TypeScript/2. 高级类型/6. d.ts声明文件.md
+++ b/src/blogs/前端基础/TypeScript/2. 高级类型/6. d.ts声明文件.md
@@ -4,13 +4,8 @@
 ## 前言
 ### 作用
 
-- 当在 TS 文件中引入使用第三方库的类型或使用继承库时，比如：axios、ES6 的 Map 类型，这些库用 JS 开发，不能获取 TS 一样的类型提示，需要一个声明文件来帮助库的使用者获取库的类型提示
-### 注意点
-
-- 同目录下 d.ts 和 ts 文件不要同名，否则模块系统无法只根据文件名加载模块
-- 如果文件使用 TS 编写，在编译成 JS 文件时可以自动生成声明文件，并在发布的时候将 d.ts 文件一起发布，无需编写声明文件
-### 导出d.ts
-在`package.json`里添加`"types": "index.d.ts"`就可以让别人使用库的时候得到类型提示。但是其实这里也可以直接填入源码文件，也就是`"types": "index.ts"`，这样不仅能得到类型，甚至在某些编辑器里可以点进源码里
+### npm包中设置导出的d.ts
+在`package.json`里添加`"types": ".d.ts文件位置"`就可以让别人使用当前npm包的时候得到类型提示。但是其实这里也可以直接填入源码文件，也就是`"types": "index.ts"`，这样不仅能得到类型，甚至在某些编辑器里可以点进源码里
 ```json
 {
     "name": "awesome",
@@ -21,40 +16,69 @@
 }
 ```
 注意
-
 - `typings`与`types`具有相同的意义，也可以使用它
-- 如果主声明文件名是`index.d.ts`并且位置在包的根目录里（与`index.js`并列），就不需要指定了 types 属性
+- 如果声明文件名是`index.d.ts`并且位置在包的根目录里（与`index.js`并列），就不需要指定了 types 属性
 ## 声明文件修饰符
-### declare
-可以用修饰符`declare`做出各种声明
-
-注意
-
-- 使用修饰符`declare`声明的类型，不能赋值，也不能有实现逻辑
-- 通过`declare`声明的类型、变量和模块，在`include`包含的文件范围内，都可以直接引用而不用去 import 或者 import type 相应的变量或类型
 ### export
-`export`用法和`declare`作用一致都是用于声明类型，但是使用上还是有一些区别的：
+`export`主要用于模块内部，将模块内定义的类型暴露给外部使用。
 
-- `export`用于指定某个模块或类可以被外部使用。也就是说使用`export`声明的类型使用时不会自动引入，需要通过`import`手动引入
-   - 而`declare`则用于定义第三方类型声明，它用于定义第三方库、框架或其他没有 TypeScript 类型声明文件的脚本变量，以便 TypeScript 在编译时能够正确核查这些脚本变量
-- d.ts 文件的顶级声明`declare`最好不要和`export`同级使用，不然在其他 ts 文件中引用这个 d.ts，就需要手动 import 导入了
+#### `export =`
+`export =` 是 CommonJS 和 AMD 模块系统中的导出语法，它将**整个模块**导出为一个单一的值，可以是对象、函数、类等。在导入时，需要使用`import = require()`语法。
+```typescript
+// 定义一个模块文件 utils.ts
+function add(a: number, b: number) {
+  return a + b
+}
+
+// 使用 export = 导出整个模块
+export = add
+
+// 在另一个文件中导入
+import addFunction = require('./utils')
+console.log(addFunction(1, 2))
+```
+- 当使用`export =`时，不能再使用`export default`或其他命名导出，因为`export =`已经将整个模块导出为一个单一的值
+- 若从使用`export =`导出的模块中导入，不能使用 ES6 的`import`语法，必须使用`import = require()`语法
+
+### declare
+`declare`用于告诉 TypeScript 编译器某个变量、函数、类、接口等的类型信息；但不包含具体的实现代码，所以一定要在运行时给定义的全局变量、函数等赋值。
+
+`declare`既可以用于声明全局的类型信息，也可以在模块内部声明局部的类型信息：
+- 在 TypeScript 里，一个文件如果没有`import`、`export`语句，则说明这个文件是一个全局文件（非模块文件）；使用`declare`声明的类型都是全局类型，可以被项目内的其他 TypeScript 文件直接使用，
+- 一旦文件中存在`import`或`export`语句，该文件会被视为模块，其内部声明的类型也会变成模块内部的类型，失去全局可见性。除非使用`export`导出。
+
+#### 注意
+TypeScript 编译器对 declare 的使用会更宽松，允许在`.d.ts`中出现有具体实现的写法，但实际上它会把这种写法当作类型声明来处理。
 ## 声明全局类型
-### 声明一个全局变量
+### 声明全局接口类型
 ```bash
+interface xxx/type xxx
+```
+- 使用`interface`和`type`时也可以加`declare`，推荐是不加。
+- 为什么可以不加？
+   - 加`declare`的原因是有些关键字 JavaScript 中也有实现，加上的作用是让 TypeScript 知道这是一个类型声明
+### 声明一个全局变量
+```typescript
 declare let xxx
 declare const xxx
 ```
-假如在项目中引入了一个sdk，这个sdk（以微信的sdk为例）里面有一些全局的对象（比如wx），但是如果不经过任何的声明，在ts文件里面直接用`wx.config()`的话，肯定会报错
+假如在项目中引入了一个微信的 SDK，里面有一些全局的对象（比如wx），如果不经过声明，在ts文件里面直接用`wx.config()`会报错，所以可以如下声明
+```typescript
+interface Wx {
+    config: () => void
+}
+declare const wx: Wx
+```
 ### 声明全局方法
 ```typescript
 declare function xxx
 
-  // 举例：声明一个全局的 test 方法
+// 举例：声明一个全局的 test 方法
 declare function test(name: string): string
 
 // 函数重载
-declare function getWidget(n: number): Widget;
-declare function getWidget(s: string): Widget[];
+declare function getWidget(n: number): Widget
+declare function getWidget(s: string): Widget[]
 ```
 ### 声明全局类
 ```bash
@@ -64,25 +88,7 @@ declare class xxx
 ```bash
 declare enum xxx
 ```
-### 扩增全局属性
-```typescript
-// 扩展新增全局变量
-declare global {
-  const myGlobalVar: string // 将能在全局直接使用 myGlobalVar
-}
-// 扩展新增 Node global 属性
-declare namespace NodeJS {
-  interface Global {
-    myGlobalVar: string // 将能在全局使用 global.myGlobalVar
-  }
-}
-
-// 扩展新增 window 属性
-declare interface Window {
-  myGlobalVar: string // 将能在全局使用 window.myGlobalVar
-}
-```
-### 声明（含有子属性的）全局对象
+### 声明全局对象
 ```typescript
 declare namespace xxx
 ```
@@ -106,7 +112,7 @@ declare namespace JQuery {
 ```
 此时就可以直接使用`JQuery.cssSelect`类型了
 
-需要注意的是命名空间中定义的类型前面不能加`declare`关键字，但是可以加`export`关键字，比如
+需要注意的是，在命名空间（`namespace`）中定义的类型前面不能加`declare`关键字，但是可以加`export`关键字，比如
 ```typescript
 declare namespace JQuery {
   export function $(ready: () => void): void // success
@@ -114,84 +120,114 @@ declare namespace JQuery {
   declare function $1(ready: () => void): void
 }
 ```
-### 声明全局类型
-```bash
-interface xxx/type xxx
-```
-
-- 使用`interface`和`type`时也可以加`declare`，推荐是不加
-- 为什么可以不加？
-   - 加`declare`的原因是因为有些关键字 JS 中也有实现，加上的作用是让 TS 知道这是一个类型声明
-## 声明模块
-npm下载的"包"自带了声明文件, 如果需要对其类型声明进行扩展就可以使用`declare module`语法
-```bash
-declare module 'xxx'
-```
-### 扩充ts/js文件的类型
-#### 让vue3支持this.$axios
-```javascript
-// main.ts
-app.config.globalProperties.$axios = axios
-```
-功能上实现了`this.$axios`，但是ts并不能自动推断出添加了`$axios`字段，所以添加如下声明文件：
+## 在已有的全局对象类型中扩展属性
+### 新增全局变量 
 ```typescript
-// global.d.ts
+// 模块文件中不能省略 declare global
+declare global {
+  const myGlobalVar: string // 将能在全局直接使用 myGlobalVar
+}
 
-// axios的实例类型
-import { AxiosInstance } from 'axios'
+// 非模块文件中可以省略 declare global
+declare const myGlobalVar: string // 将能在全局直接使用 myGlobalVar
 
-// 声明要扩充@vue/runtime-core包的声明
-// 这里扩充"ComponentCustomProperties"接口, 因为他是vue3中实例的属性的类型
-declare module '@vue/runtime-core' {
-
-  // 给`this.$http`提供类型
-  interface ComponentCustomProperties {
-    $axios: AxiosInstance;
+```
+### 扩展 Window
+```typescript
+// 模块文件中不能省略 declare global
+declare global {
+  interface Window {
+    myGlobalVar: string // 将能在全局使用 window.myGlobalVar
+  }
+}
+// 非模块文件中可以省略 declare global
+declare interface Window {
+  myGlobalVar: string // 将能在全局使用 window.myGlobalVar
+}
+```
+### 扩展 Node 的 global
+```typescript
+// 模块文件中不能省略 declare global
+declare global {
+  namespace NodeJS {
+    interface Global {
+      myGlobalVar: string // 将能在全局使用 global.myGlobalVar
+    }
+  }
+}
+// 非模块文件中可以省略 declare global
+declare namespace NodeJS {
+  interface Global {
+    myGlobalVar: string // 将能在全局使用 global.myGlobalVar
   }
 }
 ```
-上面的例子中扩充了原声明中的`interface`，但是如果导出是一个`Class`该如何写呢？
+## 声明模块
+使用`declare module`语法可以为现有的 JavaScript 模块提供类型声明，使得 TypeScript 项目能够正确识别和使用这些模块，主要用途有：
+- 为第三方库添加类型声明：当使用的第三方 JavaScript 库没有自带类型声明文件（d.ts）时，可以使用`declare module`手动为其编写类型声明，让 TypeScript 编译器能够对这些库的使用进行类型检查。
+- 自定义模块类型声明：如果有自定义的 JavaScript 模块，也可以使用`declare module`为其定义类型，方便在 TypeScript 代码中使用。
 
-下面对`any-touch`的类型进行扩充，这里`any-touch`的默认导出是一个`Class`
+基本语法如下：
+```typescript
+// 当模块名具有一定的规律时，可以使用通配符 * 来匹配多个模块
+declare module '模块名'或'模块名前缀*' {
+  // 模块内部的类型声明
+  // 可以声明变量、函数、类、接口等
+  // 如果不添加 export，意味着这个变量仅在该模块的类型声明内部可见
+  export const 变量名: 类型
+  export function 函数名(参数: 类型): 返回值类型
+  export class 类名 {
+    constructor(参数: 类型)
+    方法名(参数: 类型): 返回值类型
+  }
+  export interface 接口名 {
+    属性名: 类型
+  }
+  // 还可以有默认导出
+  export default 默认导出的类型
+}
+```
+### 扩充第三方模块的类型声明
+扩充第三方模块类型声明是指在不改变原有声明的基础上，为模块添加新的属性、方法或类型。主要通过模块扩充（Module Augmentation）的方式来实现，这种方式允许你在现有的模块类型上添加额外的定义。
+#### 扩充 lodash 模块
+假设使用了`lodash`这个第三方模块，要为其添加一个新的类型。首先，创建一个类型声明文件，例如`lodash-augmentation.d.ts`：
+```typescript
+// 引入 lodash 模块，确保 TypeScript 了解该模块的现有类型
+import * as _ from 'lodash'
 
-假设对`any-touch`的代码做了如下修改：
+declare module 'lodash' {
+  interface LoDashStatic {
+    // 添加一个新的方法类型
+    myCustomMethod(arg: string): string
+  }
+}
+```
+上述例子中，可以不添加`mport * as _ from 'lodash'`，但建议是加上。原因如下：
+- 增强代码可读性
+- 方便类型引用和检查：导入模块后，可以在类型扩充文件中使用模块内现有类型进行更复杂的类型定义和检查。
+```typescript
+import * as _ from 'lodash'
 
+declare module 'lodash' {
+  interface LoDashStatic {
+    // 可以使用 lodash 已有的类型进行参数和返回值的定义
+    anotherCustomMethod(arg: _.Dictionary<number>): _.List<number>
+  }
+}
+```
+#### 给导出内容是 Class 的模块扩展属性
+下面对`any-touch`的类型进行扩充，这里`any-touch`的默认导出是一个`Class`。假设对`any-touch`的代码做了如下修改：
 1. 导出增加`aaa`变量，是`string`类型
 2. 类的实例增加`bbb`属性，是`number`类型 
 3. 类增加静态属性`ccc`，是个函数
 ```javascript
-// global.d.ts
-
-// AnyTouch一定要导入, 因为只有导入才是扩充, 不导入就会变成覆盖
 import AnyTouch from 'any-touch'
 
 declare module 'any-touch' {
-    // 导出增加"aaa"变量, 是个字符串
+    // 导出增加 "aaa"变量, 是个字符串
     export const aaa: string;
 
     export default class {
-      // 类增加静态属性"ccc", 是个函数
-      static ccc:()=>void
-      // 类的实例增加"bbb"属性, 是number类型
-      bbb: number
-    }
-}
-```
-注意：
-
-- AnyTouch一定要导入，因为只有导入才是类型扩充，不导入就会变成覆盖
-- 如果要兼容 AMD、CommonJS、ESM，则导出语法应该使用`export = xxx`
-```typescript
-// global.d.ts
-
-// AnyTouch一定要导入, 因为只有导入才是扩充, 不导入就会变成覆盖
-import AnyTouch from 'any-touch'
-
-declare module 'any-touch' {
-    // 导出增加"aaa"变量, 是个字符串
-    export const aaa: string
-
-    export= class {
       // 类增加静态属性"ccc", 是个函数
       static ccc:()=>void
       // 类的实例增加"bbb"属性, 是number类型
@@ -211,11 +247,39 @@ at.bbb = 123
 
 AT.ccc = ()=>{}
 ```
-### 扩充非ts/js文件的类型
-#### 例子一
+#### 扩充没有类型声明文件的模块
+假设有一个 myModule 模块没有类型声明，则可以通过下面这种方式扩充
+```typescript
+declare module 'myModule' {
+  export function greet(name: string): string
+  // 添加新的类型
+  export function sayGoodbye(name: string): string
+}
+```
+### 覆盖第三方模块的类型声明
+覆盖第三方模块的类型声明相对复杂，因为 TypeScript 通常不鼓励直接覆盖原有声明，可能会导致类型不一致和潜在的错误。不过，可以通过一些技巧来实现类似覆盖的效果，例如创建一个新的类型声明文件并将其优先级提高。
+
+#### 覆盖 axios 模块的类型声明
+假设 axios 模块有一个默认的 AxiosRequestConfig 接口，想覆盖其中的某个属性类型。
+```typescript
+// 引入原始的 axios 模块类型
+import { AxiosRequestConfig as OriginalAxiosRequestConfig } from 'axios'
+
+// 创建一个新的类型，继承原始类型并修改属性
+interface AxiosRequestConfig extends OriginalAxiosRequestConfig {
+  // 覆盖或修改某个属性的类型
+  timeout: number | string
+}
+
+// 声明模块并导出新的类型
+declare module 'axios' {
+  export { AxiosRequestConfig }
+}
+```
+### 扩充其他非ts、js文件的类型
+#### 扩充 vue 文件的类型
 ts只支持模块的导入导出，但是有些时候可能需要引入css/html等文件，这时候就需要用通配符让ts把他们当做模块, 下面是对`.vue`文件的导入支持(来自vue官方)：
 ```typescript
-// global.d.ts
 declare module '*.vue' {
   import { DefineComponent } from 'vue'
   const component: DefineComponent<{}, {}, any>
@@ -223,14 +287,14 @@ declare module '*.vue' {
 }
 
 // App.vue
-// 可以识别vue文件
+// 可以识别 vue 文件
 import X1 from './X1.vue';
 export default defineComponent({
     components:{X1}
 })
 ```
-声明把vue文件当做模块，同时标注模块的默认导出是"component"类型。这样在vue的components字段中注册模块才可以正确识别类型
-#### 例子二
+声明把 vue 文件当做模块，同时标注模块的默认导出是"component"类型。这样在 vue 的 components 字段中注册模块才可以正确识别类型
+#### 扩充其他文件的类型
 在编辑ts文件的时候，如果想导入`.css`、`.less`、`.png`格式的文件，如果没有经过`declare`是会提示语法错误的
 ```typescript
 declare module '*.less'
