--- a/src/blogs/Service/Docker/1. 基础/1. 概述.md
+++ b/src/blogs/Service/Docker/1. 基础/1. 概述.md
@@ -1,13 +1,13 @@
 # Docker概述
 ## 虚拟机和容器技术
 ### 什么是虚拟机
-通过添加一个**虚拟机监视器 ( Virtual Machine Monitor )** 来隔离操作系统与硬件或者应用程序和操作系统，以此达到虚拟化的目的。这个夹在其中的虚拟机监视器，常常被称为 **Hypervisor**
+通过添加一个**虚拟机监视器 ( Virtual Machine Monitor )** 来隔离「应用操作系统」与「硬件」或者隔离「应用程序」和「宿主的操作系统」，以此达到虚拟化的目的。这个夹在其中的虚拟机监视器，常常被称为 **Hypervisor**
 
 <img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/docker/虚拟机架构图.png" height="300px" />
 
-通过**虚拟机监视器**隔离每个应用程序和操作系统，将应用程序的指令转换为当前宿主操作系统能执行的指令，从而做到不需要修改应用程序就可以执行的目的。也正是这个原因，**这些语言的程序都具有非常强的跨平台性**
+通过**虚拟机监视器**隔离每个应用程序和宿主操作系统，将应用程序的指令转换为当前宿主操作系统能执行的指令，从而做到不需要修改应用程序就可以跨平台执行的目的。也正是这个原因，**这些语言的程序都具有非常强的跨平台性**
 
-虽然虚拟机技术得益于**Hypervisor**的加持，使得应用程序或者操作系统可以在无任何修改的情况下运行在另一平台上，但很容易发现，其有一个致命的缺陷，就是所有指令都必须经过**虚拟机监视器**的处理。
+虽然虚拟机技术得益于**Hypervisor**的加持，使得应用程序或者应用操作系统可以在无任何修改的情况下运行在另一平台上，但很容易发现，其有一个致命的缺陷，就是所有指令都必须经过**虚拟机监视器**的处理。
 
 这也就意味着，虚拟机的性能是低下的。例如运行在 ZendVM 或者 HHVM 中的 PHP 程序，所有代码虽然编译成了 Opcode 码，但其依然是通过虚拟机才最终转换为机器所能识别的机器码去执行
 
@@ -78,7 +78,7 @@ Docker 的实现，主要归结于三大技术：
 - 控制组 ( Control Groups )
 - 联合文件系统 ( Union File System )
 
-#### 命名空间 ( Namespaces ) 
+#### 命名空间 ( Namespaces ) ：实现容器中将程序隔离
 命名空间是 Linux 内核在 2.4 版本后逐渐引入的一项**用于运行隔离**的模块；**能够将计算机资源进行切割划分，形成各自独立的空间**
 
 就实现而言，Linux Namespaces 可以分为很多具体的子系统，如 User Namespace、Net Namespace、PID Namespace、Mount Namespace 等等。
@@ -86,7 +86,7 @@ Docker 的实现，主要归结于三大技术：
 这里以进程为例，通过 PID Namespace，可以造就一个独立的进程运行空间，在其中进程的编号又会从 1 开始。在这个空间中运行的进程，完全感知不到外界系统中的其他进程或是其他进程命名空间中运行的进程。
 
 利用 PID Namespace，Docker 就实现了容器中将程序隔离这一目标
-#### 控制组 ( Control Groups ) 
+#### 控制组 ( Control Groups ) ：硬件资源的隔离以及控制硬件资源的分配
 资源控制组 ( 常缩写为 CGroups ) 是 Linux 内核在 2.6 版本后逐渐引入的一项**对计算机资源控制**的模块；**用于控制计算机资源。** 与以隔离进程、网络、文件系统等虚拟资源为目的 Namespace 不同，**CGroups 主要做的是硬件资源的隔离以及控制硬件资源的分配**
 
 通过 CGroups，可以指定任意一个隔离环境对任意资源的占用值或占用率，这对于很多分布式使用场景来说是非常有用的功能
