--- a/src/blogs/常用命令/Linux/测试网络.md
+++ b/src/blogs/常用命令/Linux/测试网络.md
@@ -1,13 +1,15 @@
 # 测试网络
 ## ping 命令
 ### 概述
-**ping命令用来测试双向联通性，发送ICMP包**
+ping 是网络层连通性检测工具，用于检测目标主机是否可达、网络延迟（RTT）、数据包丢失率。
 
-ping也属于一个通信协议，是TCP/IP协议的一部分。**ping命令本身处于应用层，相当于一个应用程序，它直接使用网络层的ICMP协议。** 它的作用主要为:
+> ping也属于一个通信协议，是TCP/IP协议的一部分。ping命令直接使用ICMP协议。
+
+ping命令通过发送 ICMP Echo Request 数据包到目标主机，并等待 ICMP Echo Reply 响应。它的作用主要为：
 - 通常用来检测网络的连通情况和测试网络速度
 - 也可以根据域名得到相应主机的IP地址，**不包含端口号**
 - 根据ping返回的TTL值来判断对方所使用的操作系统及数据包经过路由器数量
-- 因为具备以上功能，ping命令常常被黑客用来进行网络扫描和攻击
+### 使用方式
 ```bash
 $ ping https://wwww.baodi.com
 ## ping【目标主机的域名】【目标主机的域名】【不带包头的包大小】
@@ -24,7 +26,6 @@ Request timeout for icmp_seq 1
 ## 最小/最大/平均响应时间和本机硬件耗费时间
 round-trip min/avg/max/stddev = 238.539/253.308/281.818/20.164 ms
 ```
-
 - icmp_seq：ping序列，从1开始；如果数字不是按顺序递增也就意味着丢包了
 - bytes值：表示通信过程中发送的数据包大小，单位是字节
 - time值：表示响应时间，这个时间越小，说明你与对方通信的速度越快，延时越短
@@ -35,26 +36,42 @@ round-trip min/avg/max/stddev = 238.539/253.308/281.818/20.164 ms
       - WindowsNT/2000/XP系统的TTL最大值为128
       - UNIX主机的TTL最大值为255
 
-ping指的是端对端连通，通常用来作为可用性的检查，但是某些病毒木马会强行大量远程执行ping命令抢占你的网络资源，导致系统变慢，网速变慢。严禁ping入侵作为大多数防火墙的一个基本功能提供给用户进行选择。通常的情况下你如果不用作服务器或者进行网络测试，可以放心的选中它，保护你的电脑。
+ping指的是端对端连通，通常用来作为可用性的检查，但是某些病毒木马会强行大量远程执行ping命令抢占你的网络资源，导致系统、网速变慢。严禁ping入侵作为大多数防火墙的一个基本功能提供给用户进行选择。通常的情况下你如果不用作服务器或者进行网络测试，可以放心的选中它，保护你的电脑。
 ## telnet命令
-**telnet协议是TCP/IP协议族的其中之一**，是Internet远端登录服务的标准协议和主要方式，常用于网页服务器的远端控制，可供使用者在本地主机执行远端主机上的工作。
+telnet 是应用层服务验证工具。主要用于检测目标机器的端口是否开放、服务是否响应、协议交互能力以及网页服务器的远端控制，可供使用者在本地主机执行远端主机上的工作。
 
-使用者首先在电脑执行telnet程序，连线至目的地服务器，然后输入帐号和密码以验证身份。使用者可以在本地主机输入命令，然后让已连接的远端主机执行，就像直接在对方的控制台上输入一样。传统telnet会话所传输的资料并未加密，帐号和密码等敏感资料容易会被窃听，因此很多服务器都会封锁telnet服务，改用更安全的ssh。
+>telnet协议是TCP/IP协议族的其中之一
+
+连接远程主机流程：首先使用者在电脑执行telnet程序，连线至目标服务器，然后输入帐号和密码以验证身份。使用者可以在本地主机输入命令，然后让已连接的远端主机执行，就像直接在对方的控制台上输入一样。
+
+传统telnet会话所传输的资料并未加密，帐号和密码等敏感资料容易会被窃听，因此很多服务器都会封锁telnet服务，改用更安全的ssh。
 
 一般的telnet指令为：
 ```bash
 $ telnet www.baidu.com 80
 ```
-**同时也是测试目标机器的TCP端口是否开放。** 如`telnet IP地址 3389`是用来测试目标机器的3389端口是否开放，如果连接失败，可能是防火墙屏蔽，也可能是目标机器没有启用相关远程桌面服务(windows)，或者修改了默认占用3389端口
+如`telnet IP地址 3389`是用来测试目标机器的3389端口是否开放，如果连接失败，可能是防火墙屏蔽，也可能是目标机器没有启用相关远程桌面服务(windows)，或者修改了默认占用3389端口
 ## telnet、ping区别
+telnet 与 ping 是网络诊断中两个不同层级的工具，ping 是网络层连通性检测工具，telnet 是应用层服务验证工具。主要区别如下：
+- ping的作用是验证网络层连通性。主要用于检测目标主机是否可达、网络延迟（RTT）、数据包丢失率。
+- telnet作用是验证传输层/应用层连通性。主要用于检测目标端口是否开放、服务是否响应、协议交互能力。
 
-- telnet是用来探测指定ip是否开放指定端口和远程登录机器
-- ping用来检查网络是否通畅或者网络连接速度的命令。ping也属于一个通信协议，是TCP/IP协议的一部分
-   - **ping命令本身处于应用层，相当于一个应用程序，它直接使用网络层的ICMP协议**
-
-简单的说，ping 可以测试到目标机器的连通性。ping域名还可以得出解析IP。评估网络质量。而telnet命令则用来远程登陆，同时也是测试目标机器的TCP端口是否开放，但telnet不通并不一定代表网络不通。
-
-ping是基于ICMP协议的命令，就是你发出去一个数据包，对方收到后返给你一个！就好比声纳。这个协议是可以禁止的！禁止后，如果你ping对方，对方收到后就不回馈给你，这样你就显示无法ping通，但实际你们还是连着的！telnet是登陆服务器的！服务没禁止就能登陆。
+### 典型诊断组合
+网络不可达
+```bash
+ping 10.0.0.5          # 验证网络层
+telnet 10.0.0.5 22     # 验证SSH服务
+```
+服务异常
+```bash
+ping db-server         # 正常（网络层OK）
+telnet db-server 3306  # 失败（应用层问题）
+```
+防火墙检测
+```bash
+ping web-server        # 失败（ICMP被过滤）
+telnet web-server 80   # 成功（HTTP端口开放）
+```
 ### 例子
 离你家百里之外有一个大house，ping就是从你家到house的“路”是通的，可以到达，这个“路”可以是水路，可以小路，也可以是航线，不同的“路”代表了网络质量。ping通代表你们可以连通，物理上没有阻隔。
 telnet就是这个大house有很多门，门有各自的编号，你可以从不同的门进去之干不同的事情，有的门是进去是喝茶的，有的是唱歌的，当然这些门后的功能不是绝对对应的，这家的001门是喝茶的，别家喝茶的是走002门。这些门就是port。
