--- a/src/blogs/常见算法题/链表.md
+++ b/src/blogs/常见算法题/链表.md
@@ -12,7 +12,7 @@
 - 输出：[2, 3]
 ```
 1. 由于链表的头节点可能会被删除，因此需要额外使用一个哑节点（dummy node）指向链表的头节点。
-2. 如果下个节点和下下个节点不同，将当前节点指向下个节点。
+2. 如果下个节点和下下个节点不同，将当前节点指向下个节点
    1. 比如示例1中，节点1、节点2。
 3. 如果下个节点和下下个节点相同，遍历剩余节点，直至找到与下个节点不同的节点，并将下个节点指向下下个节点。
    1. 比如示例1中下个节点指向第一个节点3，与下下个节点相同，走完上述逻辑后，下个节点指向的是第一个节点4。
